--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -2,9 +2,15 @@ parameters:
   socloz.nsq.delayed.topic_name: __socloz_delayed
 
 services:
+  socloz.nsq.logger:
+    class: Socloz\NsqBundle\Logger\MonologAdapter
+    arguments: ["@logger"]
   socloz.nsq:
     class: Socloz\NsqBundle\Topic\Manager
-    arguments: [%socloz.nsq.delayed.topic_name%, "@?socloz.nsq.lookup"]
+    arguments:
+      - %socloz.nsq.delayed.topic_name%
+      - "@?socloz.nsq.lookup"
+      - "@socloz.nsq.logger"
   socloz.nsq.delayed_messages.consumer:
     class: Socloz\NsqBundle\Delayed\Consumer
     arguments: ["@socloz.nsq"]
